--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="https://cdn.discordapp.com/attachments/1146233368573378661/1267487597496897687/IMG_6801.jpg?ex=66a8f750&is=66a7a5d0&hm=ce0cce63598ff116d0f810e7aa87a530e041215484dfa1938b0358f9da46bb1c&" alt="" /></span>
-								<p> Hello! I’m Mobin, an 18-year-old residing in vibrant New York City and currently pursuing my studies at City CollegeIt is my passion to translate creative ideas into functional web applications, and I am looking forward to applying my skills in real-world scenarios.. Through this focused effort, I’ve developed a solid foundation in CSS, HTML, and JavaScript. My passion is translating creative ideas into functional web applications, and I'm looking forward to applying my skills to actual projects. Be sure to check out my <a href="/images/Resume.pdf" target="_blank"> resume</a>.</p>
+								<p> Hello! I’m Mobin, an 18-year-old residing in vibrant New York City and currently pursuing my studies at City College. It is my passion to translate creative ideas into functional web applications, and I am looking forward to applying my skills in real-world scenarios.. Through this focused effort, I’ve developed a solid foundation in CSS, HTML, and JavaScript. My passion is translating creative ideas into functional web applications, and I'm looking forward to applying my skills to actual projects. Be sure to check out my <a href="/images/Resume.pdf" target="_blank"> resume</a>.</p>
 								  
 								<h1> Some facts about me:</h1>
 								<ul>
